# desafio-inoa

./: CMakeLists.txt  README.md  config.txt  email_sender.cpp  main.cpp  stock_fetcher.cpp  stock_fetcher.hpp
